; ModuleID = '/home/carl/AnghaBench/esp-idf/components/driver/esp32s2beta/extr_rtc_touchpad.c_touch_pad_set_voltage.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/driver/esp32s2beta/extr_rtc_touchpad.c_touch_pad_set_voltage.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i64, i64, i64 }

@TOUCH_HVOLT_KEEP = common dso_local global i64 0, align 8
@RTCCNTL = common dso_local global %struct.TYPE_4__ zeroinitializer, align 8
@TOUCH_LVOLT_KEEP = common dso_local global i64 0, align 8
@TOUCH_HVOLT_ATTEN_KEEP = common dso_local global i64 0, align 8
@ESP_OK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @touch_pad_set_voltage(i64 %0, i64 %1, i64 %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  store i64 %0, i64* %4, align 8
  store i64 %1, i64* %5, align 8
  store i64 %2, i64* %6, align 8
  %7 = call i32 (...) @RTC_TOUCH_ENTER_CRITICAL()
  %8 = load i64, i64* %4, align 8
  %9 = load i64, i64* @TOUCH_HVOLT_KEEP, align 8
  %10 = icmp sgt i64 %8, %9
  br i1 %10, label %11, label %13

11:                                               ; preds = %3
  %12 = load i64, i64* %4, align 8
  store i64 %12, i64* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @RTCCNTL, i32 0, i32 0, i32 2), align 8
  br label %13

13:                                               ; preds = %11, %3
  %14 = load i64, i64* %5, align 8
  %15 = load i64, i64* @TOUCH_LVOLT_KEEP, align 8
  %16 = icmp sgt i64 %14, %15
  br i1 %16, label %17, label %19

17:                                               ; preds = %13
  %18 = load i64, i64* %5, align 8
  store i64 %18, i64* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @RTCCNTL, i32 0, i32 0, i32 1), align 8
  br label %19

19:                                               ; preds = %17, %13
  %20 = load i64, i64* %6, align 8
  %21 = load i64, i64* @TOUCH_HVOLT_ATTEN_KEEP, align 8
  %22 = icmp sgt i64 %20, %21
  br i1 %22, label %23, label %25

23:                                               ; preds = %19
  %24 = load i64, i64* %6, align 8
  store i64 %24, i64* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @RTCCNTL, i32 0, i32 0, i32 0), align 8
  br label %25

25:                                               ; preds = %23, %19
  %26 = call i32 (...) @RTC_TOUCH_EXIT_CRITICAL()
  %27 = load i32, i32* @ESP_OK, align 4
  ret i32 %27
}

declare dso_local i32 @RTC_TOUCH_ENTER_CRITICAL(...) #1

declare dso_local i32 @RTC_TOUCH_EXIT_CRITICAL(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
